# tarium

./: .gitignore  AGENTS.md  Cargo.toml  INFO.md  MOD_STATES.md  OPEN-CMD.bat  README.md  build-with-credentials.ps1  build-with-credentials.sh  build.rs  config.json  justfile  my-mods.txt  notes.md  starvox-mods.txt  test_mod_list.txt  todo.md  upgrade_output.txt
.github/workflows/: release.yml
docs/: game-version-filters.md
libarov/: Cargo.toml
libarov/src/: add.rs  archive_analyzer.rs  lib.rs  scan.rs
libarov/src/config/: filters.rs  mod.rs  mod_state.rs  structs.rs
libarov/src/upgrade/: check.rs  check_test.rs  mod.rs  mod_downloadable.rs
libium/: Cargo.toml
libium/src/: lib.rs
src/: add.rs  cli.rs  download.rs  file_picker.rs  logging.rs  main.rs  tests.rs
src/auth/: mod.rs  storage.rs
src/subcommands/: auth.rs  list.rs  mod.rs  mod_state.rs  remove.rs  upgrade.rs
src/subcommands/modpack/: mod.rs
src/subcommands/profile/: configure.rs  create.rs  delete.rs  info.rs  mod.rs  switch.rs
tests/: mod_state_tests.rs
