[workspace]

[workspace.dependencies]
reqwest = { version = "0.12.23", default-features = false, features = [
    "rustls-tls",
    "json",
] }
clap = { version = "4.5.47", features = ["derive", "env"] }
serde_json = "1.0.143"
octocrab = "0.44.1"

[package]

name = "tarium"
version = "0.1.0"
repository = "https://github.com/NQMVD/tarium"
description = "CLI program for managing SPT mods from Github Releases"
authors = ["Noah <noahb@hey.com>"]

license = "MPL-2.0"
readme = "README.md"
categories = ["command-line-utilities", "games"]
keywords = ["mod-manager", "github"]

edition = "2021"
rust-version = "1.80"                   # Bound by `std::sync::LazyLock`
exclude = [".github", "tests", "media"]


[features]
default = ["gui"]

# Replaces the CLI text input with a GUI file dialogue for picking folders
gui = ["rfd"]

# Enables embedded GitHub App credentials for distribution
embedded-credentials = []


[dependencies]
serde_json.workspace = true
octocrab.workspace = true
reqwest.workspace = true
clap.workspace = true

rfd = { version = "0.15.4", optional = true, default-features = false, features = [
    "xdg-portal",
    "tokio",
] }
tokio = { version = "1.47.1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }

clap_complete = "4.5.57"
parking_lot = "0.12.4"
indicatif = "0.18.0"
fs_extra = "1.3.0"
colored = "3.0.0"
fern = { version = "0.7.1", features = ["colored"] }
log = { version = "0.4.28", features = ["kv"] }
beef = "0.5"
url = "2.5"
jsonwebtoken = "9.3"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"

inquire = "0.7.5"
libarov = { path = "./libarov" }
anyhow = "1.0.99"
size = "0.5.0"
chrono = "0.4.41"
zip = "3.0"
sevenz-rust = "0.6"

[dev-dependencies]
rand = "0.9.2"
tempfile = "3.8"


[profile.release]
codegen-units = 1
strip = true
lto = "fat"
